2009-03-18  Les Harris  <lharris@gnome.org>

	* configure.ac: Bumped required GTK+ version to 2.14

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_class_init),
	(mud_subwindow_constructor), (mud_subwindow_size_allocate_cb):
	Subwindow size fixes.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_constructor),
	(mud_subwindow_set_terminal_font),
	(mud_subwindow_set_size_force_grid),
	(mud_subwindow_update_geometry), (mud_subwindow_mapped_cb),
	(mud_subwindow_entry_keypress_cb), (mud_subwindow_set_size): Will no
	longer send blank input if enter is pressed and the input area is
	hidden.  Only updates window geometry if the window is mapped.  Added
	callback to map to force grid on VTE when the window is mapped. This
	hopefully fixes a strange bug where VTE would keep trying to resize to
	80x25.
	* src/zmp/zmp-subwindow.c (zmp_subwindow_register_commands),
	(zmp_subwindow_open), (zmp_subwindow_do_input): Added subwindow.input
	support. do_input now uses subwindow.input to pass input to the
	server.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.[ch]: Added api for hiding and showing all
	subwindows attached to the view.
	* src/mud-subwindow.c: Now uses gdk_window_get_frame_extents to store
	coordinates on hiding. This ensures it shows in the correct place. Hid
	cursor display in the subwindow. Added view-hidden property so a view
	can notify the subwindow that it's been hidden automatically and not
	by a user.
	* src/mud-subwindow.h: Made mud_subwindow_show and mud_subwindow_hide
	public.
	* src/mud-window.c (mud_window_notebook_page_change): Now closes all
	the old view's subwindows on page change and shows the new view's.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.[ch]: 
	* src/mud-subwindow.[ch]: Added api for setting input capabilities on
	a subwindow.
	* src/zmp/zmp-subwindow.c (zmp_subwindow_register_commands),