@@ -1,5 +1,12 @@
 2009-03-18  Les Harris  <lharris@gnome.org>
 
+	* src/mud-subwindow.c (mud_subwindow_class_init),
+	(mud_subwindow_constructed), (mud_subwindow_configure_event_cb),
+	(mud_subwindow_focus_in_cb): Removed map signal and code. Added
+	focus-in callback on terminal to focus the entry.
+
+2009-03-18  Les Harris  <lharris@gnome.org>
+
 	* configure.ac: Bumped required GTK+ version to 2.14
 
 2009-03-18  Les Harris  <lharris@gnome.org>
